--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,8 +9,77 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --page-background-image: url(../images/cover-image-dark.png);
+  --accent-color: #FF0070;
+  --text-color: #F1B2CE;
+  --title-color: #DB00FF;
+  --group-title-color: #FF0070;
+  --corner-color: var(--accent-color);
+  --subtitle-color: #000028;
 }
 
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
 }
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --page-background-image: url(../images/cover-image-dark.png);
+    --accent-color: #FF0070;
+    --text-color: #F1B2CE;
+    --title-color: #DB00FF;
+    --group-title-color: #FF0070;
+    --corner-color: var(--accent-color);
+    --subtitle-color: #000028;
+  }
+
+  /* Остальные стили, только при необходимости */
+  .header__theme-menu-button {
+    color: var(--accent-color);
+  }
+
+  .header__theme-menu-button:hover {
+    border-color: rgba(255, 0, 112, 0.4);
+  }
+
+  .header__theme-menu-button:focus-visible {
+    border-block-end: 1px solid var(--accent-color);
+    
+  }
+
+  .header__theme-menu-button_active {
+    border: 1px solid var(--accent-color);    
+  }
+
+  .header__rec {
+    display: block;
+  }
+
+  .header__text-paragraph {
+    color: #000028;
+  }
+  
+} 
+
+.theme-dark .header__theme-menu-button {
+  color: var(--accent-color);
+}
+
+.theme-dark .header__theme-menu-button:hover {
+  border-color: rgba(255, 0, 112, 0.4);
+}
+
+.theme-dark .header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid var(--accent-color);
+  
+}
+
+.theme-dark .header__theme-menu-button_active {
+  border: 1px solid var(--accent-color);
+  
+}
+
+.theme-dark .header__rec {
+  display: block;
+}
+
