--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,12 +4,18 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  font-family: 'IBM Plex mono', sans-serif;
+  font-weight: normal;
 }
+
+ html {
+  padding: 0;
+} 
 
 body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
-  margin: 0 auto;
+  margin: 0 auto;  
 }
 
 h1,
