--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,36 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --page-background-image: url(../images/cover-image-light.png);
+  --accent-color: #ff8dcb;
+  --text-color: #353430;
+  --title-color: #FFC2E6;
+  --group-title-color: var(--text-color);
+  --corner-color: var(--text-color);
+  --subtitle-color: var(--text-color);
 }
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+}
+
+.theme-light .header__theme-menu-button {
+  color: var(--text-color);
+}
+
+.theme-light .header__theme-menu-button:hover {
+  border-color: rgba(50, 49, 45, 0.4);
+}
+
+.theme-light .header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid var(--text-color);
+  
+}
+
+.theme-light .header__theme-menu-button_active {
+  border: 1px solid var(--text-color);  
+}
+
+.theme-light .header__rec {
+  display: none;
 }
