--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,398 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-image: var(--page-background-image);
+  background-attachment: fixed;
+  background-color: #fff1f7;
+  /* padding: 10px; */
 }
+
+.header {
+  z-index: 1;
+  position: relative;
+  display: grid;
+  align-items: start; 
+  grid-template-rows: 1fr 1fr 1fr;
+  height: 100vh;
+  min-height: 668px;
+  /* background-color: #ff0; */
+  padding: 10px;
+  
+}
+
+.decorated-zone::before {
+  content: '';
+  position: absolute;
+  display: block;
+  right: 10px;
+  top:10px;
+  border-inline-end: 1px solid var(--corner-color);
+  border-block-start: 1px solid var(--corner-color);
+  z-index: 10;
+  width: 25px;
+  height: 25px;
+}
+
+.decorated-zone::after {
+  content: '';
+  position: absolute;
+  display: block;
+  bottom: 10px;
+  left:10px;
+  border-inline-start: 1px solid var(--corner-color);
+  border-block-end: 1px solid var(--corner-color);
+  z-index: 10;
+  width: 25px;
+  height: 25px;
+}
+
+.header__theme-menu {
+  justify-self: self-end;
+  margin-block-start: 65px;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+  padding: 0;
+  margin: 0;
+  flex-direction: column;
+  list-style-type: none;  
+}
+
+.header__theme-menu-button {
+  width: 100%;
+  background-color: transparent;
+  padding-inline-end: 13px;
+  padding-inline-start: 13px;
+  padding-block-start: 1px;
+  padding-block-end: 1px;
+  outline: 0;
+  font-size: 18px;
+  line-height: 1.2;
+  text-transform:lowercase;  
+  cursor: pointer; 
+  border: 1px solid transparent; 
+  /* border: 1px solid #000;  */
+}
+
+ .header__theme-menu-button:hover {
+  border-color: rgba(50, 49, 45, 0.4);
+}
+
+.header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid #000;
+  
+} 
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--text-color);
+  pointer-events: none;
+}
+
+/* .header__theme-menu-button:hover {
+  outline: 1px solid #000;
+} */
+
+.header__title-text {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: bold;
+  line-height: 0.83;
+  color: var(--title-color);
+  text-shadow: 4px 4px 0 var(--accent-color);
+  /* padding-inline-end: 10px; */
+  /* padding-inline-start: 10px; */
+  padding-block-start: 10px;
+}
+
+.header__text {
+  margin-block-start: 40px;  
+}
+
+.header__text-paragraph {
+  font-weight: bold;
+  font-size: 18px;
+  color: var(--subtitle-color);
+}
+
+.title-decor {
+  background-color: var(--accent-color);  
+}
+
+.header__rec {
+  position: absolute;  
+  color: #FF0070;
+  padding-inline-end: 18px;
+  font-size: 18px;
+  top: 10px;
+  right: 20px;
+  display: none;
+}
+
+.header__rec::after {
+  content: '';
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 8px;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: #FF0070;
+  box-shadow: 0px 0px 5px 3px rgba(255, 0, 112, 1);
+}
+
+.cards {
+  padding: 10px;
+  margin-block-start:30px;
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: 50px;
+}
+
+.cards__group-title {
+  font-size: 18px;
+  font-weight: bold;
+  /* margin-block-start: 50px; */
+  margin-block-end: 20px;
+  color: var(--group-title-color);
+}
+
+.card_item {
+  margin-block-end: 20px;
+}
+
+.card_item:last-child {
+  margin-block-end: 0;
+}
+
+.card_item-title {
+  font-weight: bold;
+  margin-block-end: 9px;
+  color: var(--subtitle-color);
+}
+
+.card_item-text {
+  color: var(--text-color);
+  font-size: 18px;
+}
+
+.card_item-text a {
+  text-decoration: none;
+  text-shadow: 1.7px 1.7px 0 var(--accent-color);
+  border: 1px solid transparent;
+}
+
+.card_item-text a:hover {
+  border-block-end: 1px solid var(--text-color);
+}
+
+.card_item-text a:focus-visible {
+  outline: none;
+  border: 1px solid var(--text-color);
+}
+
+.card_item-add-title {
+  font-weight: bold;
+  font-size: 18px;
+  margin-block-end: 20px;
+  color: var(--subtitle-color);
+}
+
+.card_item-title-noaccent {
+  font-weight: normal;
+}
+
+.card_item-add-title-pic {
+  margin-block-end: 10px;
+}
+
+.picture-cards__items {
+  display: grid;
+  row-gap: 5px;
+  /* background-color: #f00; */
+}
+
+.picture-cards__item {
+  /* background-color: #00f; */
+}
+
+.picture-cards__item-picture {
+  width: 100%;
+  margin: 0;
+}
+
+footer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  min-height: 668px;
+  margin-block-start: 30px;
+}
+
+.footer-title {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: bold;
+  line-height: 0.83;
+  color: #FFC2E6;
+  text-shadow: 2px 2px 0 var(--accent-color);
+  color: var(--title-color);
+}
+
+
+.gridtest {
+  display: grid;
+  grid-template-columns: 300px 300px;
+  /* grid-auto-rows: 50px; */
+  gap: 10px;
+  justify-content:center;
+  align-content: start;
+  align-items:center;
+  justify-items:center;
+  margin-top: 200px;
+  margin-bottom: 200px; 
+  width: 100%;
+  background-color: #ff0;
+  height: 100vh;
+}
+
+/* .gridtest div {
+  width: 100%;
+  height: 100%;
+  background-color: #f00;
+}
+
+.item1 {  
+  grid-row: 1/100;
+} */
+
+
+@media (min-width: 768px) {
+  .header {
+     align-items: center; 
+     min-height: 1024px; 
+     padding: 5px;   
+  }
+
+  .decorated-zone::before {
+    right: 20px;
+    top: 20px;
+  }
+
+  .decorated-zone::after {
+    bottom: 20px;
+    left:20px;
+  }
+
+  .header__theme-menu {
+    justify-self: self-end;
+    align-self: center;
+    margin-block-start: 130px;
+    padding-inline-end: 15px;
+  }
+
+  .header__text {
+    align-self: start;
+    justify-self: end;
+    width: 49%;
+    margin-inline-end: 10px;
+    /* margin-block-start: 40px;   */
+  }
+
+  .header__title-text {
+     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .cards {
+    padding: 20px;
+    gap: 80px;
+    margin-block-start:38px;
+  }  
+
+  .cards__group-two-cols {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 15px;
+  }
+
+  .cards__group-title {
+    padding-inline-end: 2px;
+  }
+  
+  .cards__group-title-left-text {
+    width: 30%;
+    /* margin-block-start: 30px; */
+  }
+
+  .picture-cards__items {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-block-start: 20px;
+  }
+
+  .picture-cards__item--sunset {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  } 
+
+  .picture-cards__item--ice-cream {
+    grid-column: 3/4; 
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }  
+
+  .picture-cards__item--tape {
+    grid-column: 1/2; 
+    grid-row: 2/5;
+  }   
+
+  .picture-cards__item--street {
+    grid-column: 2/4; 
+    grid-row: 3/5;
+  } 
+
+  .picture-cards__item img {
+    height: 100%;
+    object-fit: cover;
+  }
+  
+      
+} 
+
+@media (min-width: 1024px) {
+    .header__theme-menu {
+      justify-self: center;
+      align-self: start;
+      margin-block-start: 14px;
+      padding-inline-end: inherit;
+    }
+
+    .header__theme-menu-list {
+      gap: 10px;
+      flex-direction: row;
+    }
+
+    .header {
+      min-height: 768px; 
+    }
+
+    .header__text {
+      margin-block-start: 50px;  
+    }
+
+    .cards__group-items-3cols {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+    }
+
+    
+      
+}
+
+
+
+
