--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,9 +5,10 @@
 
 :root {
   --page-background-image: url(../images/cover-image-light.png);
-  --accent-color: #ff8dcb; 
+  --background-color: #fff1f7;
+  --accent-color: #ff8dcb;
   --text-color: #353430;
-  --title-color: #FFC2E6;
+  --title-color: #ffc2e6;
   --group-title-color: var(--text-color);
   --corner-color: var(--text-color);
   --subtitle-color: var(--text-color);
