--- a/styles/style.css
+++ b/styles/style.css
@@ -318,6 +318,10 @@ footer {
     gap: 15px;
   }
 
+  .card_item {
+    padding-inline-end: 2px;
+  }
+
   .cards__group-title {
     padding-inline-end: 2px;
   }
@@ -388,6 +392,6 @@ footer {
   .cards__group-items-3cols {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: 19px;
   }
 }
