--- a/styles/style.css
+++ b/styles/style.css
@@ -104,11 +104,11 @@
   text-shadow: 4px 4px 0 var(--accent-color);
   /* padding-inline-end: 10px; */
   /* padding-inline-start: 10px; */
-  padding-block-start: 10px;
+  padding-block-start: 12px;
 }
 
 .header__text {
-  margin-block-start: 40px;
+  margin-block-start: 43px;
 }
 
 .header__text-paragraph {
@@ -209,13 +209,12 @@
   margin-block-end: 10px;
 }
 
-.picture-cards__items {
+.picture-cards {
   display: grid;
-  row-gap: 5px;
-  /* background-color: #f00; */
+  gap: 10px;
 }
 
-.picture-cards__item-picture {
+.picture-cards img {
   width: 100%;
   margin: 0;
 }
@@ -269,6 +268,7 @@ footer {
     align-items: center;
     min-height: 1024px;
     padding: 5px;
+    padding-inline-start: 2px;
   }
 
   .decorated-zone::before {
@@ -291,13 +291,18 @@ footer {
   .header__text {
     align-self: start;
     justify-self: end;
-    width: 49%;
-    margin-inline-end: 10px;
+    width: 48%;
+    margin-inline-end: 14px;
     /* margin-block-start: 40px;   */
   }
 
+  /* .header__title {
+    margin-block-start: 0;
+  } */
+  
   .header__title-text {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    padding-block-start: 0;
   }
 
   .header__rec {
@@ -315,7 +320,7 @@ footer {
   .cards__group-two-cols {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    gap: 15px;
+    gap: 14px;
   }
 
   .card_item {
@@ -331,36 +336,40 @@ footer {
     /* margin-block-start: 30px; */
   }
 
-  .picture-cards__items {
+  .picture-cards {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     margin-block-start: 20px;
   }
 
-  .picture-cards__item--sunset {
+  .picture-cards__sunset {
     grid-column-start: 1;
     grid-column-end: 3;
   }
 
-  .picture-cards__item--ice-cream {
+  .picture-cards__ice-cream {
     grid-column: 3/4;
     grid-row-start: 1;
     grid-row-end: 3;
   }
 
-  .picture-cards__item--tape {
+  .picture-cards__tape {
     grid-column: 1/2;
-    grid-row: 2/5;
+    grid-row: 2/4;
   }
 
-  .picture-cards__item--street {
+  .picture-cards__street {
     grid-column: 2/4;
-    grid-row: 3/5;
+    grid-row: 3/4;
   }
 
-  .picture-cards__item img {
+  .picture-cards img {
     height: 100%;
     object-fit: cover;
+  }
+
+  footer {
+    margin-block-start: 40px;
   }
 
   .footer-title {
@@ -393,5 +402,13 @@ footer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 19px;
+  }
+
+  .cards__group-two-cols {
+    gap: 12px;
+  }
+
+  .card_item {
+    padding-inline-end: 0;
   }
 }
