--- a/styles/style.css
+++ b/styles/style.css
@@ -7,10 +7,11 @@
   background-color: var(--background-color);
   background-size: cover;
   background-position: center;
-  /* padding: 10px; */
+  padding: 10px;
 }
 
 .header {
+  width: 100%;
   z-index: 1;
   position: relative;
   display: grid;
@@ -19,15 +20,15 @@
   height: 100vh;
   min-height: 668px;
   /* background-color: #ff0; */
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .decorated-zone::before {
   content: "";
   position: absolute;
   display: block;
-  right: 10px;
-  top: 10px;
+  /* right: 10px;
+  top: 10px; */
   border-inline-end: 1px solid var(--corner-color);
   border-block-start: 1px solid var(--corner-color);
   z-index: 10;
@@ -39,8 +40,8 @@
   content: "";
   position: absolute;
   display: block;
-  bottom: 10px;
-  left: 10px;
+  /* bottom: 10px;
+  left: 10px; */
   border-inline-start: 1px solid var(--corner-color);
   border-block-end: 1px solid var(--corner-color);
   z-index: 10;
@@ -104,11 +105,11 @@
   text-shadow: 4px 4px 0 var(--accent-color);
   /* padding-inline-end: 10px; */
   /* padding-inline-start: 10px; */
-  padding-block-start: 12px;
+  padding-block-start: 5px;
 }
 
 .header__text {
-  margin-block-start: 43px;
+  margin-block-start: 30px;
 }
 
 .header__text-paragraph {
@@ -145,7 +146,7 @@
 }
 
 .cards {
-  padding: 10px;
+  /* padding: 10px; */
   margin-block-start: 29px;
   display: grid;
   grid-template-columns: 1fr;
@@ -156,7 +157,8 @@
   font-size: 18px;
   font-weight: bold;
   margin-block-start: 0;
-  margin-block-end: 20px;
+  margin-block-end: 0;
+  /* line-height: 23.4px; */
   color: var(--group-title-color);
 }
 
@@ -170,16 +172,26 @@
 
 .card_item-title {
   font-weight: bold;
-  margin-block-end: 10px;
   margin-block-start: 21px;
+  margin-block-end: 10px;  
   font-size: 18px;
+  /* line-height: 23.4px; */
   color: var(--subtitle-color);
 }
 
 .card_item-text {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding-block-start: 0;
+  padding-block-end: 0;
   color: var(--text-color);
-  /* line-height: 1.298; */
+  /* line-height: 23.4px; */
   font-size: 18px;
+}
+
+.cards__group-items-advices .card_item-title {
+  margin-block-start: 20px;
+  margin-block-end: 10px;
 }
 
 .card_item-text a {
