--- a/styles/style.css
+++ b/styles/style.css
@@ -287,36 +287,43 @@ footer {
 } */
 
 @media (min-width: 768px) {
+  .page {
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
+  }
+
   .header {
     align-items: center;
     min-height: 1024px;
-    padding: 5px;
+    /* padding: 5px; */
     padding-inline-start: 2px;
+    padding-block-start: 20px;
+    padding-block-end: 20px;
+    /* background-color: #ff0; */
   }
 
   .decorated-zone::before {
-    right: 20px;
+    /* right: 20px; */
     top: 20px;
   }
 
   .decorated-zone::after {
     bottom: 20px;
-    left: 20px;
+    /* left: 20px; */
   }
 
   .header__theme-menu {
     justify-self: self-end;
     align-self: center;
-    margin-block-start: 130px;
-    padding-inline-end: 15px;
+    margin-block-start: 110px;
   }
 
   .header__text {
     align-self: start;
     justify-self: end;
-    width: 48%;
-    margin-inline-end: 14px;
-    /* margin-block-start: 40px;   */
+    width: 50%;
+    margin-inline-end: 0;
+    margin-block-start: 45px;  
   }
 
   /* .header__title {
@@ -326,6 +333,7 @@ footer {
   .header__title-text {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     padding-block-start: 0;
+    margin-inline-start: -20px;
   }
 
   .header__rec {
@@ -335,22 +343,27 @@ footer {
   }
 
   .cards {
-    padding: 20px;
-    gap: 80px;
-    margin-block-start: 38px;
+    /* padding: 20px; */
+    gap: 58px;
+    margin-block-start: 40px;
   }
 
   .cards__group-two-cols {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    gap: 14px;
+    gap: 18px;
   }
 
   .card_item {
     padding-inline-end: 2px;
   }
 
+  /* .card_item-title {
+    margin-top: 20px;
+  } */
+
   .cards__group-title {
+    margin-block-start: 20px;
     padding-inline-end: 2px;
   }
 
@@ -363,6 +376,10 @@ footer {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     margin-block-start: 20px;
+  }
+
+  .card_item-add-title-pic {
+    margin-block-start: 28px;
   }
 
   .picture-cards__sunset {
@@ -392,7 +409,7 @@ footer {
   }
 
   footer {
-    margin-block-start: 40px;
+    margin-block-start: 60px;
   }
 
   .footer-title {
@@ -404,7 +421,7 @@ footer {
   .header__theme-menu {
     justify-self: center;
     align-self: start;
-    margin-block-start: 14px;
+    margin-block-start: 0;
     padding-inline-end: inherit;
   }
 
@@ -418,7 +435,7 @@ footer {
   }
 
   .header__text {
-    margin-block-start: 50px;
+    margin-block-start: 58px;
   }
 
   .cards__group-items-3cols {
@@ -433,5 +450,14 @@ footer {
 
   .card_item {
     padding-inline-end: 0;
+  }
+
+  .cards__group-items-advices {
+    /* padding-block-start: 0; */
+    margin-block-start: 2px;
+  }
+
+  .card_item-add-title-pic {
+    margin-block-start: 25px;
   }
 }
