--- a/styles/style.css
+++ b/styles/style.css
@@ -7,8 +7,8 @@
   background-color: var(--background-color);
   background-size: cover;
   background-position: center;
-  padding-inline-start: 10px;
-  padding-inline-end: 10px;
+  /* padding-inline-start: 10px;
+  padding-inline-end: 10px; */
 }
 
 .header {
@@ -23,6 +23,8 @@
   margin-block-end: 10px;
   padding-block-start: 10px;
   padding-block-end: 10px;
+  padding-inline-start: 10px;
+  padding-inline-end: 10px;
   /* background-color: #ff0; */
   /* padding: 10px; */
 }
@@ -31,7 +33,7 @@
   content: "";
   position: absolute;
   display: block;
-  right: 0;
+  right: 10px;
   top: 10px;
   border-inline-end: 1px solid var(--corner-color);
   border-block-start: 1px solid var(--corner-color);
@@ -45,7 +47,7 @@
   position: absolute;
   display: block;
   bottom: 10px;
-  left: 0;
+  left: 10px;
   border-inline-start: 1px solid var(--corner-color);
   border-block-end: 1px solid var(--corner-color);
   z-index: 10;
@@ -151,6 +153,8 @@
 
 .cards {
   /* padding: 10px; */
+  padding-inline-start: 10px;
+  padding-inline-end: 10px;
   margin-block-start: 40px;
   display: grid;
   grid-template-columns: 1fr;
@@ -241,6 +245,8 @@
 }
 
 footer {
+  padding-inline-start: 10px;
+  padding-inline-end: 10px;
   /* background-color: #ff0; */
   position: relative;
   display: flex;
@@ -287,29 +293,30 @@ footer {
 } */
 
 @media (min-width: 768px) {
-  .page {
+  /* .page {
     padding-inline-start: 20px;
     padding-inline-end: 20px;
-  }
+  } */
 
   .header {
     align-items: center;
     min-height: 1024px;
     /* padding: 5px; */
-    padding-inline-start: 2px;
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
     padding-block-start: 20px;
     padding-block-end: 20px;
     /* background-color: #ff0; */
   }
 
   .decorated-zone::before {
-    /* right: 20px; */
+    right: 20px;
     top: 20px;
   }
 
   .decorated-zone::after {
     bottom: 20px;
-    /* left: 20px; */
+    left: 20px;
   }
 
   .header__theme-menu {
@@ -346,6 +353,8 @@ footer {
     /* padding: 20px; */
     gap: 58px;
     margin-block-start: 40px;
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
   }
 
   .cards__group-two-cols {
@@ -422,7 +431,7 @@ footer {
     justify-self: center;
     align-self: start;
     margin-block-start: 0;
-    padding-inline-end: inherit;
+    /* padding-inline-end: inherit; */
   }
 
   .header__theme-menu-list {
