--- a/styles/style.css
+++ b/styles/style.css
@@ -367,6 +367,10 @@ footer {
     padding-inline-end: 2px;
   }
 
+  .card_item-text {
+    line-height: 1.296;
+  }
+
   /* .card_item-title {
     margin-top: 20px;
   } */
