--- a/styles/style.css
+++ b/styles/style.css
@@ -83,6 +83,8 @@
   text-transform: lowercase;
   cursor: pointer;
   border: 1px solid transparent;
+  transition: all 1s;
+  color: var(--text-color);
   /* border: 1px solid #000;  */
 }
 
@@ -91,11 +93,11 @@
 }
 
 .header__theme-menu-button:focus-visible {
-  border-block-end: 1px solid #000;
+  border-block-end: 1px solid var(--text-color);
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid var(--text-color);
+   border: 1px solid var(--text-color);
   pointer-events: none;
 }
 
@@ -103,7 +105,7 @@
   outline: 1px solid #000;
 } */
 
-.header__title-text {
+.header__title {
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-weight: bold;
   line-height: 0.83;
@@ -114,11 +116,13 @@
   padding-block-start: 10px;
 }
 
+/* .header__text {
+  margin-block-start: 43px;
+} */
+
 .header__text {
   margin-block-start: 43px;
-}
-
-.header__text-paragraph {
+  display: block;
   font-weight: bold;
   font-size: 18px;
   color: var(--subtitle-color);
@@ -158,8 +162,9 @@
   margin-block-start: 40px;
   display: grid;
   grid-template-columns: 1fr;
-  gap: 50px;
+  gap: 49px;
 }
+
 
 .cards__group-title {
   font-size: 18px;
@@ -170,24 +175,28 @@
   color: var(--group-title-color);
 }
 
-.card_item {
+.card__item {
   /* margin-block-end: 20px; */
+  display: grid;
+  align-items: start;
+  padding-block-start: 20px;
+  gap: 11px;
 }
 
-.card_item:last-child {
+.card__item:last-child {
   margin-block-end: 0;
 }
 
-.card_item-title {
+.card__item-title {
   font-weight: bold;
-  margin-block-start: 21px;
-  margin-block-end: 10px;
+  /* margin-block-start: 21px; */
+  /* margin-block-end: 10px; */
   font-size: 18px;
   /* line-height: 23.4px; */
   color: var(--subtitle-color);
 }
 
-.card_item-text {
+.card__item-text {
   margin-block-start: 0;
   margin-block-end: 0;
   padding-block-start: 0;
@@ -197,45 +206,48 @@
   font-size: 18px;
 }
 
-.cards__group-items-advices .card_item-title {
-  margin-block-start: 20px;
-  margin-block-end: 10px;
-}
+/* .cards__group-items_advices {
+  margin-block-start: 5px;
+} */
 
-.card_item-text a {
+.card__item-text a {
   text-decoration: none;
   text-shadow: 1.7px 1.7px 0 var(--accent-color);
   border: 1px solid transparent;
 }
 
-.card_item-text a:hover {
+.card__item-text a:hover {
   border-block-end: 1px solid var(--text-color);
 }
 
-.card_item-text a:focus-visible {
+.card__item-text a:focus-visible {
   outline: none;
   border: 1px solid var(--text-color);
 }
 
-.card_item-add-title {
+/* .card__item-add-title {
   font-weight: bold;
   font-size: 18px;
   margin-block-end: 20px;
   color: var(--subtitle-color);
-}
+} */
 
-.card_item-title-noaccent {
+.card__item-title-noaccent {
   font-weight: normal;
 }
 
-.card_item-add-title-pic {
+/* .card__item_pics {
+  font-weight: bold;
+  font-size: 18px;
   margin-block-start: 3px;
-  margin-block-end: 10px;
-}
+  margin-block-end: 20px;
+  color: var(--subtitle-color);
+} */
 
 .picture-cards {
   display: grid;
   gap: 10px;
+  padding-block-start: 10px;
   /* background-color: #f0f; */
 }
 
@@ -337,7 +349,7 @@ footer {
     margin-block-start: 0;
   } */
   
-  .header__title-text {
+  .header__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     padding-block-start: 0;
     margin-inline-start: -20px;
@@ -351,32 +363,36 @@ footer {
 
   .cards {
     /* padding: 20px; */
-    gap: 58px;
+    gap: 60px;
     margin-block-start: 40px;
     padding-inline-start: 20px;
     padding-inline-end: 20px;
   }
 
-  .cards__group-two-cols {
+  .cards__group_why-advices {
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 18px;
   }
+  
+  /* .cards__group_why-advices .card__item-title {
+    margin-block-start: 5px;
+  } */
 
-  .card_item {
+  .card__item {
     padding-inline-end: 2px;
   }
 
-  .card_item-text {
+  .card__item-text {
     line-height: 1.296;
   }
 
-  /* .card_item-title {
+  /* .card__item-title {
     margin-top: 20px;
   } */
 
   .cards__group-title {
-    margin-block-start: 20px;
+    margin-block-start: 18px;
     padding-inline-end: 2px;
   }
 
@@ -388,12 +404,12 @@ footer {
   .picture-cards {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-    margin-block-start: 20px;
+    margin-block-start: 10px;
   }
 
-  .card_item-add-title-pic {
+  /* .card__item_pics {
     margin-block-start: 28px;
-  }
+  } */
 
   .picture-cards__sunset {
     grid-column-start: 1;
@@ -451,26 +467,26 @@ footer {
     margin-block-start: 58px;
   }
 
-  .cards__group-items-3cols {
+  .cards__group-items_3-cols {
     display: grid;
+    align-items: start;
     grid-template-columns: repeat(3, 1fr);
     gap: 19px;
   }
 
-  .cards__group-two-cols {
+  .cards__group_why-advices {
     gap: 12px;
   }
 
-  .card_item {
+  .card__item {
     padding-inline-end: 0;
   }
 
-  .cards__group-items-advices {
-    /* padding-block-start: 0; */
+  /* .cards__group-items_advices {
     margin-block-start: 2px;
-  }
+  } */
 
-  .card_item-add-title-pic {
-    margin-block-start: 25px;
-  }
+  /* .card__item_pics {
+    margin-block-start: 2px;
+  } */
 }
