--- a/styles/style.css
+++ b/styles/style.css
@@ -84,20 +84,20 @@
   cursor: pointer;
   border: 1px solid transparent;
   transition: all 1s;
-  color: var(--text-color);
+  color: var(--menu-color);
   /* border: 1px solid #000;  */
 }
 
 .header__theme-menu-button:hover {
-  border-color: rgba(50, 49, 45, 0.4);
+  border-color: var(--menu-border-hover-color);
 }
 
 .header__theme-menu-button:focus-visible {
-  border-block-end: 1px solid var(--text-color);
+  border-block-end: 1px solid var(--menu-color);
 }
 
 .header__theme-menu-button_active {
-   border: 1px solid var(--text-color);
+  border: 1px solid var(--menu-color);
   pointer-events: none;
 }
 
@@ -139,7 +139,7 @@
   font-size: 18px;
   top: 10px;
   right: 20px;
-  display: none;
+  display: var(--rec-display);
 }
 
 .header__rec::after {
